[gd_scene load_steps=7 format=3 uid="uid://0im4n2acuff4"]

[ext_resource type="PackedScene" uid="uid://i4qy6jsprmux" path="res://src/ui/spintext.tscn" id="1_0xa1e"]
[ext_resource type="Script" path="res://src/ui/color_picker.gd" id="1_ahrf4"]
[ext_resource type="Texture2D" uid="uid://day5sgttb84cn" path="res://icons/color_picker_circle_fill.svg" id="2_whhq2"]
[ext_resource type="Texture2D" uid="uid://c46kx4nskvc44" path="res://icons/color_picker_circle.svg" id="3_0nson"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_4f1pe"]
size = Vector2(256, 256)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_rx57y"]
size = Vector2(16, 256)

[node name="ColorPicker" type="Panel"]
custom_minimum_size = Vector2(392, 276)
offset_right = 392.0
offset_bottom = 276.0
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource("1_ahrf4")

[node name="ColorBox" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 266.0
offset_bottom = 266.0
focus_mode = 2
texture = SubResource("PlaceholderTexture2D_4f1pe")

[node name="ColorCircle" type="TextureRect" parent="ColorBox"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 16.0
offset_bottom = 16.0
pivot_offset = Vector2(8, 8)
texture = ExtResource("2_whhq2")
expand_mode = 1

[node name="OutLine" type="TextureRect" parent="ColorBox/ColorCircle"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 16.0
offset_bottom = 16.0
pivot_offset = Vector2(8, 8)
texture = ExtResource("3_0nson")
expand_mode = 1

[node name="HueBox" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 276.0
offset_top = 10.0
offset_right = 292.0
offset_bottom = 266.0
focus_mode = 2
texture = SubResource("PlaceholderTexture2D_rx57y")

[node name="HueLine" type="ColorRect" parent="HueBox"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 16.0
offset_bottom = 2.0

[node name="GridContainer" type="GridContainer" parent="."]
custom_minimum_size = Vector2(80, 0)
layout_mode = 0
offset_left = 302.0
offset_top = 10.0
offset_right = 382.0
offset_bottom = 71.0
size_flags_horizontal = 8
theme_override_constants/h_separation = 5
theme_override_constants/v_separation = 5
columns = 2

[node name="Label" type="Label" parent="GridContainer"]
layout_mode = 2
text = "R:"
horizontal_alignment = 2

[node name="RedEdit" parent="GridContainer" instance=ExtResource("1_0xa1e")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 255.0
integer = true
display_rounded = true
value = 255.0
speed = 1.0

[node name="LineEdit" parent="GridContainer/RedEdit" index="0"]
focus_next = NodePath("../../GreenEdit/LineEdit")
focus_previous = NodePath("../../../OkButton")

[node name="Label3" type="Label" parent="GridContainer"]
layout_mode = 2
text = "G:"
horizontal_alignment = 2

[node name="GreenEdit" parent="GridContainer" instance=ExtResource("1_0xa1e")]
unique_name_in_owner = true
layout_mode = 2
max_value = 255.0
integer = true
display_rounded = true
value = 255.0
speed = 1.0

[node name="LineEdit" parent="GridContainer/GreenEdit" index="0"]
focus_next = NodePath("../../BlueEdit/LineEdit")
focus_previous = NodePath("../../RedEdit/LineEdit")

[node name="Label2" type="Label" parent="GridContainer"]
layout_mode = 2
text = "B:"
horizontal_alignment = 2

[node name="BlueEdit" parent="GridContainer" instance=ExtResource("1_0xa1e")]
unique_name_in_owner = true
layout_mode = 2
max_value = 255.0
integer = true
display_rounded = true
value = 255.0
speed = 1.0

[node name="LineEdit" parent="GridContainer/BlueEdit" index="0"]
focus_next = NodePath("../../HueEdit/LineEdit")
focus_previous = NodePath("../../GreenEdit/LineEdit")

[node name="Padding" type="Control" parent="GridContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="Padding2" type="Control" parent="GridContainer"]
layout_mode = 2

[node name="Label4" type="Label" parent="GridContainer"]
layout_mode = 2
text = "H:"
horizontal_alignment = 2

[node name="HueEdit" parent="GridContainer" instance=ExtResource("1_0xa1e")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 255.0
integer = true
display_rounded = true
value = 255.0
speed = 1.0

[node name="LineEdit" parent="GridContainer/HueEdit" index="0"]
focus_next = NodePath("../../SaturationEdit/LineEdit")
focus_previous = NodePath("../../BlueEdit/LineEdit")

[node name="Label5" type="Label" parent="GridContainer"]
layout_mode = 2
text = "S:"
horizontal_alignment = 2

[node name="SaturationEdit" parent="GridContainer" instance=ExtResource("1_0xa1e")]
unique_name_in_owner = true
layout_mode = 2
max_value = 255.0
integer = true
display_rounded = true
value = 255.0
speed = 1.0

[node name="LineEdit" parent="GridContainer/SaturationEdit" index="0"]
focus_next = NodePath("../../ValueEdit/LineEdit")
focus_previous = NodePath("../../HueEdit/LineEdit")

[node name="Label6" type="Label" parent="GridContainer"]
layout_mode = 2
text = "V:"
horizontal_alignment = 2

[node name="ValueEdit" parent="GridContainer" instance=ExtResource("1_0xa1e")]
unique_name_in_owner = true
layout_mode = 2
max_value = 255.0
integer = true
display_rounded = true
value = 255.0
speed = 1.0

[node name="LineEdit" parent="GridContainer/ValueEdit" index="0"]
focus_next = NodePath("../../HexEdit")
focus_previous = NodePath("../../SaturationEdit/LineEdit")

[node name="Padding3" type="Control" parent="GridContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="Padding4" type="Control" parent="GridContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="Label7" type="Label" parent="GridContainer"]
layout_mode = 2
text = "#"
horizontal_alignment = 2

[node name="HexEdit" type="LineEdit" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_previous = NodePath("../ValueEdit/LineEdit")
alignment = 2
select_all_on_focus = true

[node name="OkButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -90.0
offset_top = -31.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
focus_next = NodePath("../GridContainer/RedEdit/LineEdit")
text = "Ok"

[editable path="GridContainer/RedEdit"]
[editable path="GridContainer/GreenEdit"]
[editable path="GridContainer/BlueEdit"]
[editable path="GridContainer/HueEdit"]
[editable path="GridContainer/SaturationEdit"]
[editable path="GridContainer/ValueEdit"]
